# smart_manufacturing

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  patches.txt  pyproject.toml  setup.py
docs/: API.md  ARCHITECTURE.md  DOCTYPES.md  MODULES.md
smart_manufacturing/: hooks.py  modules.txt
smart_manufacturing/analytics/: tasks.py
smart_manufacturing/analytics/utils/: oee.py
smart_manufacturing/api/: analytics.py  planning.py  quality.py  shop_floor.py
smart_manufacturing/batch_traceability/: tasks.py
smart_manufacturing/batch_traceability/utils/: stock_entry.py
smart_manufacturing/bom_engineering/utils/: bom.py
smart_manufacturing/config/: desktop.py
smart_manufacturing/localization/: __init__.py
smart_manufacturing/localization/europe/: __init__.py
smart_manufacturing/localization/gcc/: __init__.py
smart_manufacturing/localization/india/: __init__.py
smart_manufacturing/localization/pakistan/: __init__.py
smart_manufacturing/maintenance_equipment/: tasks.py
smart_manufacturing/maintenance_equipment/utils/: maintenance.py
smart_manufacturing/manufacturing_costing/: tasks.py
smart_manufacturing/manufacturing_costing/utils/: costing.py  permissions.py
smart_manufacturing/mrp_enhanced/: tasks.py
smart_manufacturing/mrp_enhanced/utils/: mrp.py  purchase_order.py
smart_manufacturing/production_planning/: tasks.py
smart_manufacturing/setup/: install.py
smart_manufacturing/shop_floor/: tasks.py
smart_manufacturing/sm_quality_management/: tasks.py
smart_manufacturing/utils/: jinja.py  notifications.py
(+145 files in other folders)
