[project]
name = "smart_manufacturing"
authors = [
    { name = "Smart Manufacturing", email = "info@smartmanufacturing.io" },
]
description = "Production-ready Smart Manufacturing Suite for ERPNext/Frappe"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"
